catalog.html с условием доступности

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 			</ul>
 		</nav>
 		<div class="main-header-contacts">
-			<!--Режим работы и телефон магазина-->
+			<!--1.4.Режим работы и телефон магазина-->
 			<h2 class="visually-hidden">Режим работы и телефон магазина</h2> <!--Скрытый заголовок-->
 			<p>С 10 до 20, ежедневно</p>
 			<p><b>8 812 450-25-25</b></p>
@@ -159,7 +159,7 @@
 				<button type="button" name="feedback-form">Форма обратной связи</button>
 			</form>
 		</section>	
-	<!--3. Подвал-->
+	<!--3.***ПОДВАЛ***-->
 	<footer class="main-footer">
 		<!--3.1 Социальные сети-->
 		<div class="footer-social">
