--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 	<meta charset="utf-8">
 	<link href="css/normalize.css" rel="stylesheet">
 	<link rel="stylesheet" type="text/css" href="css/style.css">
+	<script type="text/javascript" src="js/scripts.js"></script>
 	<link href="https://fonts.googleapis.com/css?family=Roboto:700,900,500&subset=latin,cyrillic" rel="stylesheet" type="text/css">
 	<title>GllacyShop</title>
 </head>
@@ -38,7 +39,14 @@
 							<nav class="user-menu">
 								<h2 class="visually-hidden">Навигация по сайту для пользователя</h2> 
 									<ul class="user-menu-list">
-										<li class="btn search"><a href="#">Поиск</a></li>
+										<li class="btn search">
+											<a href="#">Поиск</a>
+												<div class="modal modal-search">
+													<form name="search" action="https://echo.htmlacademy.ru" method="get">
+														<label for="search" class="visually-hidden">Поиск</label> 
+														<input class="input-search" id="search" type="text" name="search" placeholder="Что ищем?"><img src="img/svg-gllacy/loupe.svg" alt="Поиск">
+													</form>
+										</li>
 										<li class="btn login"><a href="#">Вход</a></li>
 										<li class="btn basket"><a href="#">Пусто</li>
 									</ul>
@@ -228,9 +236,6 @@
 								<b>8 812 450-25-25</b><br/>
 								<span>(с 10 до 20 ежедневно)</span>
 							</p>
-
-
-
 							<a class="button feedback-button" href="feedback.html">Форма обратной связи</a>
 						</div>
 					</div>
@@ -243,22 +248,24 @@
 					<ul>
 						<li>
 							<a class="social-button" href="https://twitter.com/">
-								<img src="img/svg-gllacy/twitter.svg" width="39" height="39" alt="Твиттер"><span class="visually-hidden">Твиттер</span>
+								<span class="visually-hidden">Твиттер</span>
+								<img src="img/svg-gllacy/twitter.svg" width="32" height="32" alt="Твиттер">
 							</a>
 						</li>
 					  <li>
-					    <a class="social-button" href="https://www.instagram.com/">
-					    	<img src="img/svg-gllacy/instagram.svg" width="39" height="39" alt="Инстаграм"><span class="visually-hidden">Инстаграм</span>
+					    <a class="social-button" href="https://www.instagram.com/"><span class="visually-hidden">Инстаграм</span>
+					    	<img src="img/svg-gllacy/instagram.svg" width="32" height="32" alt="Инстаграм">
 					    </a>
 					  </li>
 					  <li>
 					    <a class="social-button" href="https://www.facebook.com/">
-					      <img src="img/svg-gllacy/fb.svg" width="39" height="39" alt="Фейсбук"><span class="visually-hidden">Фейсбук</span>
+					      <span class="visually-hidden">Фейсбук</span>
+					      <img src="img/svg-gllacy/fb.svg" width="32" height="32" alt="Фейсбук">
 					    </a>
 					  </li>
 					  <li>
 					    <a class="social-button" href="https://vk.com/">
-					      <img src="img/svg-gllacy/vk.svg" width="39" height="39" alt="Вконтакте"><span class="visually-hidden">Вконтакте</span>
+					      <img src="img/svg-gllacy/vk.svg" width="32" height="32" alt="Вконтакте">
 					    </a>
 					    </li>
 					</ul>
@@ -284,17 +291,40 @@
 		</div>	
 	</div>	
 </body>	
-		<!--***МОДАЛЬНЫЕ ОКНА***-->		
-		<div class="modal-windows"> <!--потом удалить-->
+		<!--***MODAL WINDOWS***-->
+		<!--***Feedback modal window***-->
+		<section class="modal modal-feedback">
+				<button class="modal-feedback-close" type="button">Закрыть</button>
+				<h2>Мы обязательно вам ответим!</h2>
+				<div class="feedback-form-box">
+					<form class="modal-login-form" action="https://echo.htmlacademy.ru" method="post">
+		        <label class="feedback-label">
+		          <input type="text" name="login" placeholder="Как вас зовут?">
+		        </label>
+		        <label class="feedback-label">
+		          <input type="text" name="email" placeholder="Ваша почта для ответа?">
+		        </label>
+		        <label class="feedback-label">
+		          <textarea name="comment" cols="30" rows="30" placeholder="Напишите что-нибудь..."></textarea>
+		        </label>
+		        <button class="button feedback-submit" type="button">Отправить</button>
+		      </form>
+		     </div> 
+	      <div class="modal-overlay feedback-overlay"></div>
+		</section>
+
+
+
+
+<!-- 		<div class="modal-windows">
 			<div class="modal modal-catalog">
-			<!--Модaльное окно- Выпадающее меню "Каталог"-->
 				<h2 class="visually-hidden">Выпадающее меню "Каталог"</h2> 
 					<ul class="menu-catalog">
 						<li>
 							<a class="catalog-article" href="#">Новинки</a>
 						</li>
 						<li>
-							<a href="#">Сливочное</a>
+							<a href="catalog.html">Сливочное</a>
 						</li>
 						<li>
 							<a href="#">Щербеты</a>
@@ -307,39 +337,39 @@
 						</li>
 					</ul>
 			</div>
-		<!--Модaльное окно "Поиск"-->
+
 			<div class="modal modal-search">
-					<h2 class="visually-hidden">Окно "Поиск" </h2> <!--Скрытый заголовок-->
+					<h2 class="visually-hidden">Окно "Поиск" </h2> 
 					<form name="search" action="https://echo.htmlacademy.ru" method="get">
-						<label for="search" class="visually-hidden">Поиск</label> <!--Скрытый лейбл-->
+						<label for="search" class="visually-hidden">Поиск</label> 
 						<input class="input search" id="search" type="text" name="search" placeholder="Что ищем?"><img src="img/svg-gllacy/loupe.svg" alt="Поиск">
 					</form>
 			</div>
-			<!--Модaльное окно "Вход"-->
+
 			<div class="modal modal-login">
-		      <h2 class="visually-hidden">Личный кабинет</h2> <!--Скрытый заголовок-->
+		      <h2 class="visually-hidden">Личный кабинет</h2> 
 		      <form class="login-form" action="https://echo.htmlacademy.ru" method="post">
-				  	<label for="email" class="visually-hidden">Электронная почта</label> <!--Скрытый лейбл-->
+				  	<label for="email" class="visually-hidden">Электронная почта</label> 
 				  	<input class="input email" type="email" name="email" placeholder="Электронная почта"><br/>
-				  	<label for="password" class="visually-hidden">Пароль</label> <!--Скрытый лейбл-->
+				  	<label for="password" class="visually-hidden">Пароль</label> 
 				  	<input class="input password" type="password" name="password" placeholder="Пароль"><br/>
 				  	<button class="button" name="submit" value="Войти">Войти</button><br/>
 				  	<a href="#">Забыли пароль?</a><br/>
 				  	<a href="#">Новая регистрация</a>
 					</form>	
 		  </div>
-		    <!--Модaльное окно "Корзина"-->
+		    Модaльное окно "Корзина"
 		    <div class="modal modal-basket">
 		    	<h2 class="visually-hidden">Корзина с товарами</h2>
 		        <form class="modal modal-basket" name="basket"  action="https://echo.htmlacademy.ru" method="post">
-		        	<div class="modal-basket-name"> <!--нужен ли здесь этот div? планируется с помощью него текст и кнопку прижать к правому краю-->
+		        	<div class="modal-basket-name"> 
 			        	<label for="basket">Корзина с товарами</label>
 			        	<button id="basket" type="button">
 			        	<img src="img/svg-gllacy/basket-red.svg" alt="Товары в корзине">2 товара
 			        	</button>
 			        </div>	
 		        	<table class="checked-items">
-		        		<caption class="visually-hidden">Выбранные товары</caption> <!--Скрытый заголовок таблицы-->
+		        		<caption class="visually-hidden">Выбранные товары</caption> 
 		        		<tr>
 		        			<td><img src="img/svg-gllacy/cross-small.svg" alt="Закрыть"></td>
 		        			<td><img src="img/styleguide/orange-jam.jpg" alt="Пломбир с апрельсиновым джемом"></td>
@@ -365,6 +395,6 @@
 		        	</table>
 		        		<button class="button" type="submit">Оформить заказ</button>
 		        </form>  
-		    </div>
+		    </div> -->
 		  </div>  
 </html>
